Update title for leaderboard graph

--- a/html/index.html
+++ b/html/index.html
@@ -90,7 +90,7 @@
             },
             title: {
               display: true,
-              text: 'TMX Gamify Leaderboard',
+              text: 'AWS GameDay Leaderboard',
               font: {
                 size: 20},
               color: 'black'
