team name mapping

--- a/html/index.html
+++ b/html/index.html
@@ -25,12 +25,15 @@
       // Example map new team label to account id
       // TODO: Create UI elements to populate this map
       const teamMap = {
-        '076676584357': 'Bit Lords',
-        '733970914540': 'Byte Dogs',
-        '881827915735': 'Hugs for Bugs',
-        '262041606093': 'Bootstrap Trojans',
-        '647583950536': 'Reboot Rebels',
-        '620362749088': 'Debug Thugs',
+        '884578237420': 'jjefr@amazon.com',
+        '667057476143': 'borisco@amazon.com	',
+        '701175175856': 'lanthm@amazon.com',
+        '246372952720': 'cfond@amazon.com',
+        '937799879301': 'mattlydo@amazon.com',
+        '681403437483': 'chris.williams@hashicorp.com',
+        '362788081149': 'alanwc@amazon.com',
+        '225984967978': 'tssills@amazon.com',
+        '759715336771': 'geoffaji@amazon.com',
       };
 
       // Load the chart from the function URL
